# bulk-load-dynamodb

./: app.py  cdk.json
bulk_load_dynamodb/: __init__.py
data/: dynamodb_data_balanced_10k_with_amount.csv
lambda_code/load_data_lambda/: handler.py  pyproject.toml  requirements.txt
lambda_code/split_data_lambda/: handler.py  pyproject.toml
lambda_code/update_downstream_service_lambda/: handler.py
lambda_code/update_dynamodb_table_lambda/: handler.py  pyproject.toml
