[tool.poetry]
name = "split-data-lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "split_data_lambda"}]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
